--- a/app/src/main/res/layout-v21/activity_login.xml
+++ b/app/src/main/res/layout-v21/activity_login.xml
@@ -1,28 +1,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="fill_parent"
+    android:layout_height="match_parent"
     android:background="@color/primary"
     tools:context=".LoginActivity"
-    android:weightSum="5.0"
     android:orientation="vertical"
-    tools:ignore="MergeRootFrame">
+    tools:ignore="MergeRootFrame"
+    android:gravity="center_vertical"
+    android:weightSum="7">
 
 
     <LinearLayout
         android:id="@+id/imageViewContainer"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="2.0"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:layout_weight="3">
 
         <ImageView
             android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:id="@+id/imageView"
-            android:contentDescription="LinkU Logo"
+            android:contentDescription="@string/linku_logo"
             android:src="@drawable/linku_logo_white"
-            android:baselineAlignBottom="false"
             android:layout_gravity="bottom" />
 
     </LinearLayout>
@@ -31,24 +31,25 @@
     <LinearLayout
         style="@style/LoginFormContainer"
         android:orientation="vertical"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="3.0"
-        android:weightSum="11">
+        android:layout_weight="4"
+        android:weightSum="4">
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="4"
+            android:layout_height="0dp"
             android:clickable="true"
-            android:gravity="bottom">
+            android:layout_gravity="top"
+            android:layout_weight="4"
+            android:layout_marginTop="@dimen/vertical_36dp">
 
             <EditText
                 android:id="@+id/username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/prompt_username"
+                android:hint="@string/prompt_email"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
                 android:singleLine="true"
@@ -82,31 +83,63 @@
                 android:layout_gravity="right"
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp" />
+
         </LinearLayout>
 
         <LinearLayout
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="5"
-            android:gravity="center_horizontal|bottom"
-            android:paddingBottom="@dimen/activity_vertical_margin">
+            android:layout_gravity="bottom">
 
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
-                android:textColor="@color/white85"
-                android:text="@string/no_account" />
+                android:gravity="center_horizontal|bottom">
 
-            <Button
-                android:id="@+id/signup_button"
-                android:layout_width="wrap_content"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
+                    android:textColor="@color/white85"
+                    android:text="@string/forgotton_password" />
+
+                <Button
+                    style="?android:attr/borderlessButtonStyle"
+                    android:id="@+id/reset_password_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/action_reset"
+                    android:textColor="@android:color/white"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Button" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/signup"
-                style="?android:attr/borderlessButtonStyle"
-                android:textColor="@android:color/white"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Button" />
+                android:gravity="center_horizontal|bottom"
+                android:paddingBottom="@dimen/activity_vertical_margin">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
+                    android:textColor="@color/white85"
+                    android:text="@string/no_account" />
+
+                <Button
+                    android:id="@+id/signup_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/signup"
+                    style="?android:attr/borderlessButtonStyle"
+                    android:textColor="@android:color/white"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Button" />
+
+            </LinearLayout>
+
         </LinearLayout>
 
     </LinearLayout>
