--- a/app/src/main/res/layout-v21/activity_signup.xml
+++ b/app/src/main/res/layout-v21/activity_signup.xml
@@ -1,98 +1,110 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     tools:context=".SignUpActivity"
     tools:ignore="MergeRootFrame"
     android:layout_height="fill_parent"
-    android:layout_width="fill_parent" >
+    android:layout_width="fill_parent"
+    android:background="@color/primary">
 
     <LinearLayout
         android:orientation="vertical"
-        android:background="@color/primary"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:weightSum="5.0">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <LinearLayout
-            style="@style/LoginFormContainer"
-            android:orientation="vertical"
-            android:background="@color/primary"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1.0"
-            android:gravity="bottom">
 
-            <TextView
-                android:layout_width="match_parent"
+            <FrameLayout
+                android:layout_width="256dp"
                 android:layout_height="wrap_content"
-                android:text="@string/sign_up"
-                android:id="@+id/textView"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
-                android:textColor="@android:color/white"
-                android:layout_marginTop="@dimen/keyline_2"
-                android:layout_marginBottom="@dimen/activity_vertical_margin" />
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/vertical_36dp">
 
-        </LinearLayout>
-        <LinearLayout
-            style="@style/LoginFormContainer"
-            android:orientation="vertical"
-            android:background="@color/primary"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="4.0">
+                <ImageView
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:id="@+id/profile_photo"
+                    android:src="@drawable/profile_picture_placeholder"
+                    android:scaleType="fitCenter"
+                    android:layout_gravity="center" />
 
-            <EditText
-                android:id="@+id/username_edit_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/prompt_username"
-                android:inputType="textEmailAddress"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:textColorHint="@color/hint"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/hint" />
+                <ProgressBar
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:id="@+id/progress_bar"
+                    android:visibility="invisible" />
 
-            <EditText
-                android:id="@+id/password_edit_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/prompt_password"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:textColorHint="@color/hint"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/hint"
-                android:layout_marginTop="@dimen/login_form_margin" />
+                <com.getbase.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/pick_profile_pic_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    fab:fab_icon="@drawable/ic_picture"
+                    fab:fab_colorNormal="@color/accent_2"
+                    fab:fab_colorPressed="@color/accent_2"
+                    android:layout_gravity="bottom|right"
+                    android:layout_marginBottom="-8dp" />
+            </FrameLayout>
 
-            <EditText
-                android:id="@+id/password_again_edit_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/prompt_password_again"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:imeActionId="@+id/action_signup"
-                android:imeActionLabel="@string/signup"
-                android:imeOptions="actionUnspecified"
-                android:textColorHint="@color/hint"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/hint"
-                android:layout_marginTop="@dimen/login_form_margin" />
+            <LinearLayout
+                style="@style/LoginFormContainer"
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:paddingTop="@dimen/vertical_36dp">
 
-            <Button
-                android:id="@+id/action_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:text="@string/signup"
-                style="?android:attr/borderlessButtonStyle"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
-                android:textColor="@android:color/white"
-                android:gravity="center_vertical|center_horizontal"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp" />
-        </LinearLayout>
+                <EditText
+                    android:id="@+id/username_edit_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/prompt_email"
+                    android:inputType="textEmailAddress|textAutoCorrect"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:textColorHint="@color/hint"
+                    android:textColor="@android:color/white"
+                    android:textSize="@dimen/hint" />
+
+                <EditText
+                    android:id="@+id/password_edit_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/prompt_password"
+                    android:inputType="textPassword"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:textColorHint="@color/hint"
+                    android:textColor="@android:color/white"
+                    android:textSize="@dimen/hint"
+                    android:layout_marginTop="@dimen/login_form_margin" />
+
+                <EditText
+                    android:id="@+id/password_again_edit_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/prompt_password_again"
+                    android:inputType="textPassword"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:imeActionId="@+id/action_signup"
+                    android:imeActionLabel="@string/signup"
+                    android:imeOptions="actionUnspecified"
+                    android:textColorHint="@color/hint"
+                    android:textColor="@android:color/white"
+                    android:textSize="@dimen/hint"
+                    android:layout_marginTop="@dimen/login_form_margin" />
+
+                <Button
+                    android:id="@+id/action_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:text="@string/signup"
+                    style="?android:attr/borderlessButtonStyle"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
+                    android:textColor="@android:color/white"
+                    android:gravity="center_vertical|center_horizontal"
+                    android:paddingLeft="8dp"
+                    android:paddingRight="8dp" />
+            </LinearLayout>
     </LinearLayout>
 </FrameLayout>
