--- a/app/src/main/res/layout/events_list_item.xml
+++ b/app/src/main/res/layout/events_list_item.xml
@@ -1,112 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/event_item"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/vertical_72dp"
     android:clickable="true"
-    android:foreground="?android:attr/selectableItemBackground"
-    card_view:cardCornerRadius="2dp"
-    android:layout_marginTop="8dp"
-    android:layout_marginBottom="4dp"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp">
+    android:background="?android:attr/selectableItemBackground"
+    android:paddingLeft="@dimen/keyline_1"
+    android:paddingRight="@dimen/keyline_1">
+
+    <ImageView
+        android:id="@+id/event_cat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_other"
+        android:padding="4dp"
+        android:layout_centerVertical="true" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:layout_marginLeft="@dimen/keyline_2_minus_16dp"
+        android:orientation="vertical"
+        android:layout_centerVertical="true">
 
-        <LinearLayout
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
+            android:id="@+id/event_name"
+            android:text="@string/placeholder_events_item_name"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
+            android:maxLines="1"
+            android:ellipsize="end" />
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/event_time"
-                    android:text="@string/placeholder_events_item_time"
-                    android:layout_gravity="right"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true"
-                    android:textSize="@dimen/body2"
-                    android:textIsSelectable="false"
-                    android:textColor="@color/body_grey" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/event_place"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:textColor="@color/body_grey"
-                    android:textSize="@dimen/body2" />
-            </RelativeLayout>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/event_name"
-                android:text="@string/placeholder_events_item_name"
-                android:textColor="@color/body_dark"
-                android:textSize="@dimen/title"
-                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />
-
-
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/divider_grey"/>
-
-
-        <LinearLayout
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/placeholder_events_item_attendees"
-                    android:id="@+id/attendees"
-                    android:textColor="@color/body_dark"
-                    android:textSize="@dimen/body2"
-                    android:layout_centerVertical="true" />
-                <ImageView
-                    android:id="@+id/event_cat"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_other"
-                    android:layout_alignParentTop="false"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true" />
-
-            </RelativeLayout>
-
-
-        </LinearLayout>
-
+            android:id="@+id/event_secondary"
+            android:textColor="@color/body_grey"
+            android:text="@string/placeholder_secondary"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
+            android:maxLines="1"
+            android:ellipsize="end" />
     </LinearLayout>
-
-
-
-</android.support.v7.widget.CardView>
+</RelativeLayout>
