--- a/app/src/main/res/layout/fragment_events_list.xml
+++ b/app/src/main/res/layout/fragment_events_list.xml
@@ -10,6 +10,8 @@
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingTop="@dimen/keyline_1_minus_8dp"
+        android:paddingBottom="@dimen/keyline_1_minus_8dp"
         android:dividerHeight="0dp"
         android:divider="@null"/>
 
