--- a/app/src/main/res/layout/toolbar_actionbar.xml
+++ b/app/src/main/res/layout/toolbar_actionbar.xml
@@ -4,6 +4,7 @@
         android:layout_width="match_parent"
         android:id="@+id/view_event_toolbar"
         android:minHeight="?android:actionBarSize"
+        android:background="?attr/selectableItemBackground"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_gravity="top"
         android:translationZ="5dp" />
