--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,6 +20,7 @@
     <dimen name="vertical_36dp">36dp</dimen>
     <dimen name="vertical_48dp">48dp</dimen>
     <dimen name="vertical_48dp_minus_8dp">32dp</dimen>
+    <dimen name="vertical_72dp">72dp</dimen>
 
     <!-- Other -->
     <dimen name="headerbar_elevation">4dp</dimen>
