--- a/app/src/main/res/menu/view_event_creator.xml
+++ b/app/src/main/res/menu/view_event_creator.xml
@@ -3,4 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.bdlabs_linku.linku.ViewEventActivity">
 
+    <item android:id="@+id/action_edit"
+        android:title="@string/action_edit"
+        android:icon="@drawable/ic_edit"
+        app:showAsAction="always" />
 </menu>
